# AgentGuard-CLI-Pro

./: .gitignore  Dockerfile  Makefile  README.md  README.zh-CN.md  pyproject.toml
src/agentguard/: __init__.py  cli.py  reporter.py  rules.py  scanner.py
tests/: __init__.py  test_scanner.py
