[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard-cli"
version = "1.0.0"
description = "🛡️ AgentGuard-CLI - Lightweight AI Agent Skill Security Scanner | 轻量级AI Agent技能安全扫描器"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AgentGuard Team", email = "agentguard@example.com"}
]
keywords = [
    "ai-agent", "security", "scanner", "cli", "mcp", "skill", "vulnerability",
    "prompt-injection", "code-analysis", "static-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
llm = ["urllib3"]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]

[project.scripts]
agentguard = "agentguard.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/AgentGuard-CLI"
Documentation = "https://github.com/gitstq/AgentGuard-CLI#readme"
Repository = "https://github.com/gitstq/AgentGuard-CLI"
Issues = "https://github.com/gitstq/AgentGuard-CLI/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentguard"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=agentguard --cov-report=term-missing"
